--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.17.3",
-    "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
     "nodemon": "^3.0.1"
   },
-  "version": "^14.20.1"
+  "version": "14.20.1"
 }
