--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "scripts": {
     "start": "node server.js"
   },
+  "engines": { "node": ">=14.20.1"},
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
